--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="section services">
             <h2>Services</h2>
             <ul>
-                <li>🔹 AWS Cloud Setup & Security</li>
-                <li>🔹 Cybersecurity Audits & Penetration Testing</li>
-                <li>🔹 SIEM Implementation & Automation</li>
-                <li>🔹 Technical Documentation & Writing</li>
+                <li>AWS Cloud Setup & Security</li>
+                <li>Cybersecurity Audits & Penetration Testing</li>
+                <li>SIEM Implementation & Automation</li>
+                <li>Technical Documentation & Writing</li>
             </ul>
         </div>
         <div class="section portfolio">
@@ -38,7 +38,7 @@
         </div>
         <div class="section contact">
             <h2>Contact</h2>
-            <p>📩 Email: <a href="mailto:adeen@example.com">adeen@example.com</a></p>
+            <p>📩 Email: <a href="mailto:adeenm121@gmail.com">adeenm121@gmail.com</a></p>
             <p>📍 LinkedIn: <a href="#">linkedin.com/in/adeen</a></p>
         </div>
     </div>
