--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="section services">
             <h2>Services</h2>
             <ul>
-                <li>🔹 AWS Cloud Setup & Security</li>
-                <li>🔹 Cybersecurity Audits & Penetration Testing</li>
-                <li>🔹 SIEM Implementation & Automation</li>
-                <li>🔹 Technical Documentation & Writing</li>
+                <li> AWS Cloud Setup & Security</li>
+                <li> Cybersecurity Audits & Penetration Testing</li>
+                <li> SIEM Implementation & Automation</li>
+                <li> Technical Documentation & Writing</li>
             </ul>
         </div>
         <div class="section portfolio">
